@@ -1,6 +1,7 @@
 0.12.0
 ------
 
+* Migrated row-related functionality from Table to RowSequence.
 * Simplified implementation of Row for speed and consistency. No API changes.
 * Removed fancy __repr__ implementations. Use __str__ instead. (#290)
 * ColumnMapping now supports slicing for consistency. (#286)
